--- a/ComputerStoreAPI/appsettings.json
+++ b/ComputerStoreAPI/appsettings.json
@@ -8,5 +8,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=ComputerStoreProd;Trusted_Connection=True;"
   },
+  "Jwt": {
+    "Key": "super_secret_key_123!",
+    "Issuer": "ComputerStoreAPI",
+    "Audience": "ComputerStoreClient",
+    "AccessTokenExpiryMinutes": 15,
+    "RefreshTokenExpiryDays": 7
+  },
   "AllowedHosts": "*"
 }
