--- a/ComputerStoreAPI/appsettings.json
+++ b/ComputerStoreAPI/appsettings.json
@@ -15,5 +15,14 @@
     "AccessTokenExpiryMinutes": 15,
     "RefreshTokenExpiryDays": 7
   },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    }
+  },
   "AllowedHosts": "*"
 }
